plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
	id "org.flywaydb.flyway" version "9.8.1"
}

group = 'com.tux'
version = '0.5'

java {
	sourceCompatibility = JavaVersion.VERSION_17
}

// FIXME issue here with latest gradle
processResources {
	filesMatching('application.yml') {
		expand(project.properties)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

compileJava {
	options.compilerArgs += [
			'-Amapstruct.defaultComponentModel=spring'
	]
}

repositories {
	mavenCentral()

	maven { url 'https://jitpack.io' }
}

dependencies {
	implementation 'io.github.cdimascio:dotenv-java:3.0.2'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'


	// DB
	implementation 'org.flywaydb:flyway-core'
	implementation 'org.flywaydb:flyway-mysql'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// JWT Authentication
	implementation 'com.auth0:java-jwt:4.2.2'

	// Swagger
	implementation 'commons-io:commons-io:2.11.0'
	implementation 'org.springdoc:springdoc-openapi-starter-common:2.0.2'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	// Cache
	implementation 'org.springframework:spring-context-support'
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.1'

	// Tests
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'com.h2database:h2'
	testImplementation 'com.icegreen:greenmail-junit5:1.6.11'


	// Annotations
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
}

tasks.named('test') {
	useJUnitPlatform()
}

bootRun {
	args = ["--spring.profiles.active=dev"]
}

jar {
	enabled = false
}

bootJar {
	enabled = true
}
